Added local vars, new list builders.