@@ -10,8 +10,6 @@ import org.junit.Test;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.junit.Assert.assertEquals;
@@ -25,11 +23,11 @@ public class TourServiceImplTest {
 
     @Before
     public void initializeToursList() {
-        Hotel hotel1 = new Hotel();
+        var hotel1 = new Hotel();
         hotel1.setId(68);
-        Country country1 = new Country();
+        var country1 = new Country();
         country1.setId(91);
-        Tour tour1 = new Tour();
+        var tour1 = new Tour();
         tour1.setId(1);
         tour1.setPhoto("photo.jpg");
         tour1.setDate(LocalDate.now());
@@ -39,11 +37,11 @@ public class TourServiceImplTest {
         tour1.setTourType(Tour.TourType.cultural);
         tour1.setHotel(hotel1);
         tour1.setCountry(country1);
-        Hotel hotel2 = new Hotel();
+        var hotel2 = new Hotel();
         hotel2.setId(99);
-        Country country2 = new Country();
+        var country2 = new Country();
         country2.setId(16);
-        Tour tour2 = new Tour();
+        var tour2 = new Tour();
         tour2.setId(2);
         tour2.setPhoto("photo.jpg");
         tour2.setDate(LocalDate.now());
@@ -53,11 +51,11 @@ public class TourServiceImplTest {
         tour2.setTourType(Tour.TourType.safari);
         tour2.setHotel(hotel2);
         tour2.setCountry(country2);
-        Hotel hotel3 = new Hotel();
+        var hotel3 = new Hotel();
         hotel3.setId(33);
-        Country country3 = new Country();
+        var country3 = new Country();
         country3.setId(14);
-        Tour tour3 = new Tour();
+        var tour3 = new Tour();
         tour3.setId(3);
         tour3.setPhoto("photo.jpg");
         tour3.setDate(LocalDate.now());
@@ -67,12 +65,12 @@ public class TourServiceImplTest {
         tour3.setTourType(Tour.TourType.safari);
         tour3.setHotel(hotel3);
         tour1.setCountry(country3);
-        tours = Arrays.asList(tour1, tour2, tour3);
+        tours = List.of(tour1, tour2, tour3);
     }
 
     @Test
     public void insertTest(){
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
+        var tourService = mock(TourServiceImpl.class);
         doNothing().when(tourService).insert(any(Tour.class));
         tourService.insert(any(Tour.class));
         tourService.insert(any(Tour.class));
@@ -81,7 +79,7 @@ public class TourServiceImplTest {
 
     @Test
     public void deleteTest() {
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
+        var tourService = mock(TourServiceImpl.class);
         doNothing().when(tourService).insert(any(Tour.class));
         tourService.delete(6);
         tourService.delete(8);
@@ -90,39 +88,39 @@ public class TourServiceImplTest {
 
     @Test
     public void getTourByIdTestTrue() {
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
-        TourSpecification specification = new TourSpecification(2);
-        List<Tour> singletonList = Collections.singletonList(tours.get(1));
+        var tourService = mock(TourServiceImpl.class);
+        var specification = new TourSpecification(2);
+        var singletonList = List.of(tours.get(1));
         when(tourService.getList(specification)).thenReturn(singletonList);
-        Tour tour = tourService.getList(specification).get(0);
+        var tour = tourService.getList(specification).get(0);
         assertEquals("Interesting tour2", tour.getDescription());
     }
 
     @Test
     public void getTourByIdTestFalse() {
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
-        TourSpecification specification = new TourSpecification(2);
-        List<Tour> singletonList = Collections.singletonList(tours.get(1));
+        var tourService = mock(TourServiceImpl.class);
+        var specification = new TourSpecification(2);
+        var singletonList = List.of(tours.get(1));
         when(tourService.getList(specification)).thenReturn(singletonList);
-        Tour tour = tourService.getList(specification).get(0);
+        var tour = tourService.getList(specification).get(0);
         assertNotEquals("Interesting tour1", tour.getDescription());
     }
 
     @Test
     public void getAllToursTestTrue() {
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
-        TourSpecification specification = new TourSpecification();
+        var tourService = mock(TourServiceImpl.class);
+        var specification = new TourSpecification();
         when(tourService.getList(specification)).thenReturn(tours);
-        List<Tour> tourList = tourService.getList(specification);
+        var tourList = tourService.getList(specification);
         assertEquals(3, tourList.size());
     }
 
     @Test
     public void getAllToursTestFalse() {
-        TourServiceImpl tourService = mock(TourServiceImpl.class);
-        TourSpecification specification = new TourSpecification();
+        var tourService = mock(TourServiceImpl.class);
+        var specification = new TourSpecification();
         when(tourService.getList(specification)).thenReturn(tours);
-        List<Tour> tourList = tourService.getList(specification);
+        var tourList = tourService.getList(specification);
         assertNotEquals(0, tourList.size());
     }
 
