@@ -17,7 +17,6 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 import org.springframework.web.context.WebApplicationContext;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Matchers.any;
@@ -77,9 +76,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateCountryTest_get() throws Exception {
-        Country country = new Country();
+        var country = new Country();
         country.setId(123);
-        List<Country> countries = Collections.singletonList(country);
+        var countries = List.of(country);
         when(countryService.getList(any(Specification.class))).thenReturn(countries);
         mvc.perform(get("/countries/{countryId}/update", 123)
                 .with(user("user").roles("ADMIN")))
@@ -88,9 +87,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateCountryTestFalse1_get() throws Exception {
-        Country country = new Country();
+        var country = new Country();
         country.setId(123);
-        List<Country> countries = Collections.singletonList(country);
+        var countries = List.of(country);
         when(countryService.getList(any(Specification.class))).thenReturn(countries);
         mvc.perform(get("/countries/{countryId}/update", 123)
                 .with(user("user")))
@@ -100,9 +99,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateCountryTestFalse2_get() throws Exception {
-        Country country = new Country();
+        var country = new Country();
         country.setId(123);
-        List<Country> countries = Collections.singletonList(country);
+        var countries = List.of(country);
         when(countryService.getList(any(Specification.class))).thenReturn(countries);
         mvc.perform(get("/countries/{countryId}/update", "t34")
                 .with(user("user")))
@@ -127,9 +126,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateHotelTest_get() throws Exception {
-        Hotel hotel = new Hotel();
+        var hotel = new Hotel();
         hotel.setId(123);
-        List<Hotel> hotels = Collections.singletonList(hotel);
+        var hotels = List.of(hotel);
         when(hotelService.getList(any(Specification.class))).thenReturn(hotels);
         mvc.perform(get("/hotels/{hotelId}/update", 123)
                 .with(user("user").roles("ADMIN")))
@@ -138,9 +137,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateHotelTestFalse1_get() throws Exception {
-        Hotel hotel = new Hotel();
+        var hotel = new Hotel();
         hotel.setId(123);
-        List<Hotel> hotels = Collections.singletonList(hotel);
+        var hotels = List.of(hotel);
         when(hotelService.getList(any(Specification.class))).thenReturn(hotels);
         mvc.perform(get("/hotels/{hotelId}/update", 123)
                 .with(user("user")))
@@ -150,9 +149,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateHotelTestFalse2_get() throws Exception {
-        Hotel hotel = new Hotel();
+        var hotel = new Hotel();
         hotel.setId(123);
-        List<Hotel> hotels = Collections.singletonList(hotel);
+        var hotels = List.of(hotel);
         when(hotelService.getList(any(Specification.class))).thenReturn(hotels);
         mvc.perform(get("/hotels/{hotelId}/update", "t34")
                 .with(user("user")))
@@ -177,9 +176,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateReviewTest_get() throws Exception {
-        Review review = new Review();
+        var review = new Review();
         review.setId(123);
-        List<Review> reviews = Collections.singletonList(review);
+        var reviews = List.of(review);
         when(reviewService.getList(any(Specification.class))).thenReturn(reviews);
         mvc.perform(get("/reviews/{reviewId}/update", 123)
                 .with(user("user")))
@@ -188,9 +187,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateReviewTestFalse1_get() throws Exception {
-        Review review = new Review();
+        var review = new Review();
         review.setId(123);
-        List<Review> reviews = Collections.singletonList(review);
+        var reviews = List.of(review);
         when(reviewService.getList(any(Specification.class))).thenReturn(reviews);
         mvc.perform(get("/reviews/{reviewId}/update", 123)
                 .with(anonymous()))
@@ -200,9 +199,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateReviewTestFalse2_get() throws Exception {
-        Review review = new Review();
+        var review = new Review();
         review.setId(123);
-        List<Review> reviews = Collections.singletonList(review);
+        var reviews = List.of(review);
         when(reviewService.getList(any(Specification.class))).thenReturn(reviews);
         mvc.perform(get("/countries/{countryId}/update", "t34")
                 .with(user("user")))
@@ -227,9 +226,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateTourTest_get() throws Exception {
-        Tour tour = new Tour();
+        var tour = new Tour();
         tour.setId(123);
-        List<Tour> tours = Collections.singletonList(tour);
+        var tours = List.of(tour);
         when(tourService.getList(any(Specification.class))).thenReturn(tours);
         mvc.perform(get("/tours/{tourId}/update", 123)
                 .with(user("user").roles("ADMIN")))
@@ -238,9 +237,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateTourTestFalse1_get() throws Exception {
-        Tour tour = new Tour();
+        var tour = new Tour();
         tour.setId(123);
-        List<Tour> tours = Collections.singletonList(tour);
+        var tours = List.of(tour);
         when(tourService.getList(any(Specification.class))).thenReturn(tours);
         mvc.perform(get("/tours/{tourId}/update", 123)
                 .with(user("user")))
@@ -250,9 +249,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateTourTestFalse2_get() throws Exception {
-        Tour tour = new Tour();
+        var tour = new Tour();
         tour.setId(123);
-        List<Tour> tours = Collections.singletonList(tour);
+        var tours = List.of(tour);
         when(tourService.getList(any(Specification.class))).thenReturn(tours);
         mvc.perform(get("/tours/{tourId}/update", "t34")
                 .with(user("user").roles("ADMIN")))
@@ -277,9 +276,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateUserTest_get() throws Exception {
-        User user = new User();
+        var user = new User();
         user.setId(123);
-        List<User> users = Collections.singletonList(user);
+        var users = List.of(user);
         when(userService.getList(any(Specification.class))).thenReturn(users);
         mvc.perform(get("/users/{userId}/update", 123)
                 .with(user("user").roles("ADMIN")))
@@ -288,9 +287,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateUserTestFalse1_get() throws Exception {
-        User user = new User();
+        var user = new User();
         user.setId(123);
-        List<User> users = Collections.singletonList(user);
+        var users = List.of(user);
         when(userService.getList(any(Specification.class))).thenReturn(users);
         mvc.perform(get("/users/{userId}/update", 123)
                 .with(user("user")))
@@ -300,9 +299,9 @@ public class UpdateControllerTest {
 
     @Test
     public void updateUserTestFalse2_get() throws Exception {
-        User user = new User();
+        var user = new User();
         user.setId(123);
-        List<User> users = Collections.singletonList(user);
+        var users = List.of(user);
         when(userService.getList(any(Specification.class))).thenReturn(users);
         mvc.perform(get("/users/{userId}/update", "t34")
                 .with(user("user").roles("ADMIN")))
